@@ -1,3 +1,8 @@
+2015-11-05  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/amgtar.pl: Ignore SIGPIPE
+	* installcheck/Installcheck/Application.pm: Do not fail on SIGPIPE if
+	  allowed
+
 2015-11-03  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Scribe.pm (_volume_cb): Release the old
 	  reservation when changing scribe
